RESOLVED FIXED257584
[ANGLE] Lose Metal-backed context
https://bugs.webkit.org/show_bug.cgi?id=257584
Summary [ANGLE] Lose Metal-backed context
Dan Glastonbury
Reported 2023-05-31 20:07:09 PDT
Metal-backend ANGLE rendering contexts are never lost. MTLCommandBuffers provide a status member that can be checked when completion is signalled. It should be possible to mark error from the onCompletion handler and lose the context.
Attachments
Dan Glastonbury
Comment 1 2023-05-31 20:07:47 PDT
Dan Glastonbury
Comment 2 2023-05-31 20:09:31 PDT
EWS
Comment 3 2023-07-27 19:41:08 PDT
Committed 266377@main (ef391b1f467b): <https://commits.webkit.org/266377@main> Reviewed commits have been landed. Closing PR #14567 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.