Cherry-pick 3820b42a1a38. rdar://problem/113307877

Cherry-pick ef391b1f467b. rdar://problem/109176858

        [ANGLE] Lose Metal-backed contexts
        https://bugs.webkit.org/show_bug.cgi?id=257584
        rdar://109176858

        Reviewed by Dean Jackson.

        ANGLE provides a mechanism for determing if there has been a error with the
        renderer backend via the DisplayImpl::testDeviceLost() and
        ContextImpl::getResetStatus() APIs. The Metal renderer backend never signals an
        error.

        Metal provides a status on command buffer completion to signal if there has been
        an error when processing a MTLCommandBuffer. This patch adds experimental
        support for losing the context when this status signals there was an error. The
        context can't be recovered once it is lost and needs to be recreated.

        The feature is available when ANGLE_METAL_LOSE_CONTEXT_ON_ERROR is defined when
        compiling ANGLE.

        * Source/ThirdParty/ANGLE/src/libANGLE/features.h:
        * Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/DisplayMtl.mm:
        (rx::DisplayMtl::testDeviceLost):
        (rx::DisplayMtl::restoreLostDevice):
        * Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_command_buffer.h:
        * Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_command_buffer.mm:
        (rx::mtl::CommandQueue::onCommandBufferCompleted):

        Canonical link: https://commits.webkit.org/266377@main

    Identifier: 265870.264@safari-7616.1.27-branch

Identifier: 259548.888@safari-7615.3.12.10-branch